# PZ-Mixed-mode

./: README.md
LoadingImages/: Makefile  README.me  compile_commands.json  main  main.cpp
LoadingImages/.cache/clangd/index/: images.h.00B983EBB2F3CA16.idx  imagesManager.h.94D0CA305867547A.idx  main.cpp.C0803916F6DB950C.idx
LoadingImages/include/: imagesManager.h
LoadingImages/src/: imagesManager.cpp  main.cpp
STL/: STL  contours.geojson  kod1bezVizualizacji.py  terrain.stl
StlCutter/: StlCutter.sln  informacja o VTK.txt
StlCutter/StlCutter/: Program.cs  StlCutter.cs  StlCutter.csproj
StlCutter/StlCutterLib/: CMakeLists.txt  StlCutter.cpp  StlCutter.h  StlCutterLib.vcxproj  StlCutterLib.vcxproj.filters
